# gpt

./: .gitignore  README.md  pyproject.toml
gpt/gpt1/: config.py  data_utils.py  main.py  model.py  train.py
parallel/: .env.example  .gitignore  README.md  pyproject.toml
parallel/data/: evaluation_results.json
parallel/src/: api.py  app.py  evaluate.py  ingest.py  models.py  pdf_parser.py  pipeline.py
parallel/src/generation/: __init__.py  base.py  structured.py
parallel/src/reranking/: __init__.py  base.py  llm.py
parallel/src/retrieval/: __init__.py  base.py  expanded.py  semantic.py
