[project]
name = "gpt"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = ["torch", "ruff", "mypy"]

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["gpt"]
exclude = ["**/.venv", "**/__pycache__", "**/.mypy_cache", "**/.ruff_cache"]

[tool.ruff.lint]
select = [
  "E",   # pycodestyle (errors)
  "F",   # Pyflakes
  "I",   # isort
  "UP",  # pyupgrade
  "B",   # flake8-bugbear
  "ANN", # flake8-annotations
]
ignore = [
]

[tool.ruff.lint.isort]
known-first-party = ["gpt"]
force-sort-within-sections = true

[tool.mypy]
python_version = "3.12"
strict = true
warn_unused_ignores = true
warn_redundant_casts = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
no_implicit_optional = true
check_untyped_defs = true
disallow_untyped_calls = false
ignore_missing_imports = true  # torch and plugins may lack stubs
packages = ["gpt"]
